{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 27,
  "lineage": "c0ca392c-abf0-1588-c924-c8fa7d1ca869",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a25f237e97fa2b5e",
            "arn": "arn:aws:ec2:us-east-1:816069158126:instance/i-0e8833116270c526e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8833116270c526e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072a3e6451bbce6cb",
            "private_dns": "ip-172-31-89-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e4c7669a99db64c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f56daf96811b72ba",
            "tags": {
              "Name": "Dove-web",
              "Project": "Dove"
            },
            "tags_all": {
              "Name": "Dove-web",
              "Project": "Dove"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcd3e0b36960fee"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069158126:security-group/sg-09fcd3e0b36960fee",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fcd3e0b36960fee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "816069158126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-053b64e1afd7009b7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069158126:security-group-rule/sgr-0d577293510d359f3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d577293510d359f3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09fcd3e0b36960fee",
            "security_group_rule_id": "sgr-0d577293510d359f3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069158126:security-group-rule/sgr-0bf2843a09782c024",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0bf2843a09782c024",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09fcd3e0b36960fee",
            "security_group_rule_id": "sgr-0bf2843a09782c024",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069158126:security-group-rule/sgr-00e181a00657f7ac9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00e181a00657f7ac9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09fcd3e0b36960fee",
            "security_group_rule_id": "sgr-00e181a00657f7ac9",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069158126:security-group-rule/sgr-013b3e51dbe6d4b98",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-013b3e51dbe6d4b98",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09fcd3e0b36960fee",
            "security_group_rule_id": "sgr-013b3e51dbe6d4b98",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}